src/objects/Time_Log__c.object
<CustomObject>
    <description>Tracking hours spent on feature development / bug fix</description>
    <fields>
        <fullName>Bill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <formula>IF (  Project_Member__r.Billable__c   = false , &apos;Non-Billable&apos; , &apos;Billable&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <label>Contractor Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Material_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Profit_Rounded__c</fullName>
        <formula>ABS(Estimated_Profit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Profit (Rounded)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Profit__c</fullName>
        <formula>Project_Member__r.Profit__c * Week_total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenditure__c</fullName>
        <label>Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <label>Friday Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Time Logs (Invoice)</relationshipLabel>
        <relationshipName>Time_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <label>Monday Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Billable__c</fullName>
        <formula>IF ( Tasks__r.Non_Billable__c  = true , &apos;Non-Billable&apos; , &apos;Billable&apos;)</formula>
        <inlineHelpText>Tells you if this Timecard is Billable or Non-Billable based on the Parent Task.</inlineHelpText>
        <label>Non - Billable ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Time_Material_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Member__c</fullName>
        <label>Project Team Member</label>
        <referenceTo>Project_Member__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Log</relationshipLabel>
        <relationshipName>Time_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RowTotalForVF__c</fullName>
        <label>RowTotalForVF</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowTotal__c</fullName>
        <label>RowTotal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <label>Saturday Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <label>Sunday Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <label>Tasks</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Time Logs</relationshipLabel>
        <relationshipName>Time_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <formula>Project_Member__r.Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <label>Thursday Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Amount__c</fullName>
        <formula>Project_Member__r.Hourly_Bill_Rate__c  *  Week_total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Amount__c</fullName>
        <formula>Week_total_Hours__c  *  Project_Member__r.Hourly_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <label>Tuesday Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <label>Wednesday Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_total_Hours__c</fullName>
        <formula>Sunday_Hours__c +
 Monday_Hours__c +
 Tuesday_Hours__c +
 Wednesday_Hours__c +
 Thursday_Hours__c +
 Friday_Hours__c +
 Saturday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Date__c</fullName>
        <description>Work Date</description>
        <inlineHelpText>Work Date</inlineHelpText>
        <label>Work Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Time__c</fullName>
        <description>Hours worked on feature</description>
        <inlineHelpText>Hours worked on feature</inlineHelpText>
        <label>Work Time</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requirements Review</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Land Acquistion</fullName>
                </value>
                <value>
                    <fullName>Surveying</fullName>
                </value>
                <value>
                    <fullName>Grading</fullName>
                </value>
                <value>
                    <fullName>Utility Install</fullName>
                </value>
                <value>
                    <fullName>Paving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Project__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Week_total_Hours__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Week_Start_Date__c</columns>
        <columns>Work_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Feature_Filter</fullName>
        <columns>NAME</columns>
        <columns>Work_Date__c</columns>
        <columns>Short_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Week_total_Hours__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Feature Filter</label>
    </listViews>
    <listViews>
        <fullName>New_Timecards</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Week_Start_Date__c</columns>
        <columns>Team_Member_Name__c</columns>
        <columns>Tasks__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Week_total_Hours__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>New Timecards</label>
    </listViews>
    <listViews>
        <fullName>Time_Log_Details</fullName>
        <columns>NAME</columns>
        <columns>Work_Date__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Work_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Time Log Details</label>
    </listViews>
    <nameField>
        <displayFormat>TL{00000}</displayFormat>
        <label>Time Log Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <recordTypes>
        <fullName>TimeLogNew</fullName>
        <active>true</active>
        <label>Time Log New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Log_Submitted</fullName>
        <active>true</active>
        <label>Time Log Submitted</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateDate_Wed</fullName>
        <active>true</active>
        <errorConditionFormula>and(Not(AND(Week_Start_Date__c+2 &gt;= Tasks__r.Start_Date__c ,Week_Start_Date__c +2&lt;= Tasks__r.Due_Date__c )), not(ISNULL( Wednesday_Hours__c ) ))</errorConditionFormula>
        <errorMessage>Task expired on Wednesday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>datevalidate_fri</fullName>
        <active>true</active>
        <errorConditionFormula>and(Not(AND(Week_Start_Date__c+4&gt;= Tasks__r.Start_Date__c ,Week_Start_Date__c +4&lt;= Tasks__r.Due_Date__c )), not(ISNULL( Friday_Hours__c ) ))</errorConditionFormula>
        <errorMessage>Task expired on Friday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>datevalidate_mon</fullName>
        <active>true</active>
        <errorConditionFormula>and(Not(AND(Week_Start_Date__c &gt;= Tasks__r.Start_Date__c ,Week_Start_Date__c &lt;= Tasks__r.Due_Date__c )), not(ISNULL( Monday_Hours__c ) ))</errorConditionFormula>
        <errorMessage>Task expired on monday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>datevalidate_sat</fullName>
        <active>true</active>
        <errorConditionFormula>and(Not(AND(Week_Start_Date__c+5&gt;= Tasks__r.Start_Date__c ,Week_Start_Date__c +5&lt;= Tasks__r.Due_Date__c )), not(ISNULL( Saturday_Hours__c ) ))</errorConditionFormula>
        <errorMessage>Task expired on Saturday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>datevalidate_thurs</fullName>
        <active>true</active>
        <errorConditionFormula>and(Not(AND(Week_Start_Date__c+3 &gt;= Tasks__r.Start_Date__c ,Week_Start_Date__c +3&lt;= Tasks__r.Due_Date__c )), not(ISNULL( Thursday_Hours__c ) ))</errorConditionFormula>
        <errorMessage>Task expired on thursday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>reqDesc</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(ISBLANK(Short_Description__c) , ISNULL(Short_Description__c) ), true, false)</errorConditionFormula>
        <errorMessage>Description Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validatedate_tues</fullName>
        <active>true</active>
        <errorConditionFormula>and(Not(AND(Week_Start_Date__c+1&gt;= Tasks__r.Start_Date__c ,Week_Start_Date__c +1&lt;= Tasks__r.Due_Date__c )), not(ISNULL( Tuesday_Hours__c ) ))</errorConditionFormula>
        <errorMessage>Task expired on Tuesday</errorMessage>
    </validationRules>
</CustomObject>